--- a/Key Club/Key_Club.Droid/Properties/AndroidManifest.xml
+++ b/Key Club/Key_Club.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Key_Club.Key_Club" android:installLocation="auto" android:versionName="justalpha" android:versionCode="0">
 	<uses-sdk android:minSdkVersion="15" />
-	<application></application>
+	<application android:label="Key Club" android:icon="@drawable/Icon"  android:theme="@style/MyTheme">
+  </application>
+  
 </manifest>
